<resources>
    <string name="app_name">Lab1</string>
    <string name="txtline1">Hello, World!</string>
    <string name="txtline2">The answer is 42.</string>
    <string name="txtline3">Cake is a lie!</string>
    <string name="submit">Submit</string>
    <string name="code">Please enter a code</string>
    <string name="food">Please enter a food name</string>
    <string name="pushme">Push me</string>
    <string name="hard">I\'m hidden behind the keyboard!</string>
    <string name="heh">Push the submit button to do something cool!</string>

    <string name="code11">Congratulations!</string>
    <string name="food11">New highest score!</string>
    <string name="code10">Hmm, data is only partially correct&#8230;</string>
    <string name="food10">Please try again.</string>
    <string name="code01">I need data!</string>
    <string name="food01">Please type something!</string>
    <string name="code00">There are no secrets here&#8230;</string>
    <string name="food00">for real.. not a single one.</string>

</resources>
