<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="153dp"
        android:text="@string/txtline1" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/code"
        android:singleLine="true" />

    <EditText
        android:id="@+id/food"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_alignStart="@+id/code"
        android:layout_alignEnd="@+id/code"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:focusableInTouchMode="true"
        android:hint="@string/food"
        android:singleLine="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignBottom="@+id/hard"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:onClick="submit"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/txtline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtline1"
        android:layout_alignStart="@+id/txtline1"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtline2" />

    <TextView
        android:id="@+id/txtline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtline2"
        android:layout_alignStart="@+id/txtline2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:text="@string/txtline3" />

    <Button
        android:id="@+id/pushme"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/txtline1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/txtline2"
        android:onClick="changeColor"
        android:text="@string/pushme" />

    <TextView
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/hard" />

    <TextView
        android:id="@+id/heh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pushme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/heh" />

</RelativeLayout>